--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,18 @@
 
-h1{
+header{
     text-align-last: center;
+    background-color: #090932;
+    border-radius: 20px;
+    color: darkolivegreen;
+    font-size: 20;
+    height: 70px;
+    font: bold 100% monospace;
+}
+body{
+    background-color: #2f3550;
+}
+#tit{
+    padding-top: 15px;
 }
 .supc{
    display: flex;
@@ -49,10 +61,14 @@ li:hover{
     transform: rotateY(180deg);
 }
 img{
+    padding-top: 10px;
     width: 100%;
     height: 100%;
 }
 #logo{
     width: 80%;
     height: 80%;
+}
+#pie{
+    align-content: center;
 }
